k8s/backend/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: microadventures
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
