k8s/backend/IngressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: backend
  namespace: microadventures
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: (Host(`microadventures.aronhedl.com`) || Host(`local-microadventures.aronhedl.com`)) && PathPrefix(`/backend`)
      middlewares:
        - name: strip-api-prefixes
      services:
        - kind: Service
          name: backend
          port: 8000
          scheme: http
